@@ -5,3 +5,4 @@ v0.1.0 - 2022-02-
 - add CLI
 - implement interaction with slurm api + filtering of results
 - support for brace notation and wildcards in filtering
+- implement xCat interactions and batch-integrated deployment
